Introduced apache.httpcomponents to pom.xml and Google Maps Roads API to user pages

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -132,6 +132,11 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+    	<dependency> 
+    		<groupId>org.apache.httpcomponents</groupId> 
+    		<artifactId>httpclient</artifactId> 
+    		<version>4.3.6</version> 
+   		</dependency>
 
 		<!-- Test Dependencies -->
 		<dependency>
