--- a/server/src/main/webapp/WEB-INF/logging.properties
+++ b/server/src/main/webapp/WEB-INF/logging.properties
@@ -9,5 +9,6 @@
 # </system-properties>
 #
 
-# Set the default logging level for all loggers to INFO
-.level = INFO
+# Set the default logging level for all loggers to WARNING
+.level = WARNING
+com.wix.level = INFO
